--- a/_posts/2020-05-14-block.md
+++ b/_posts/2020-05-14-block.md
@@ -2,10 +2,10 @@
 layout: post
 title: Block
 date: 2020-05-14
-category: 
+category:
 tags: []
 use_math: false
-preview: 
+preview:
 ---
 monkey clambers
 
@@ -17,6 +17,6 @@ weep for a lost proton
 
 press thread into pulp ______________ into paper
 
-the vine unravel, the Schwein squeal, the blood drip, red ... crimsone ... film, glob, thick, halt.
+the vines unravel, the blood drips, red ... crimsone ... film, glob, thick, halt.
 
-valleys and mountains in the cushions, causally closed microscopae, logic consummate, a lite blue fizz flows to seas of abstraction. density propounded by men who do not know, grins mimicked by things that will not go. rest not, son incarnate, ride not, heathen cloaked in flesh.
+valleys and mountains in the cushions, causally closed microscopae, logic consummate, a lite blue fizz flows to seas of abstraction. density propounded by men who do not know, grins mimicked by things that will not go. rest not, son incarnate.
